Fix recipe list when scrollbar present

--- a/assets/main.css
+++ b/assets/main.css
@@ -296,7 +296,7 @@ dialog {
 
 .recipes-main {
   /* Contain floats */
-  padding: 16px;
+  padding: 16px 0 16px 16px;
   overflow: hidden;
 }
 
